# labs_miakg

./: README.md  start.sh
lab1/: .gitignore  CMakeLists.txt  CMakeSettings.json
lab1/cmake-ext/: FileOrUrl.cmake  SDL2-external.cmake  glm-external.cmake
lab1/src/: helpers.cpp  main.cpp
lab2/: .editorconfig
lab2/src/: draw.cpp  draw.h  main.cpp
lab3/: .clang-format
lab3/src/: draw.cpp  draw.h  main.cpp
src/: draw.cpp  draw.h  helpers.h  main.cpp
